--- a/README
+++ b/README
@@ -2,7 +2,8 @@ WbJs
 
 WbJs is used to implement the online booking system
 (online reception for hotel and bed and breakfast)
-on your property site.
+on your property site. It uses an unobtrusive sets of
+javascript function to achieve its goal.
 
 More info at:
 
