Correct a little grammar mistake :P

--- a/README
+++ b/README
@@ -3,7 +3,7 @@ WbJs
 WbJs is used to implement the online booking system
 (online reception for hotel and bed and breakfast)
 on your property site. It uses an unobtrusive sets of
-javascript function to achieve its goal.
+javascript functions to achieve its goal.
 
 More info at:
 
